Testing Cloud Build trigger

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,9 +18,6 @@
    - '$_GCP_REGION'
    - '--platform'
    - 'managed'
-   - '--update-env-vars="NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL"'
-   - '--update-env-vars="NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY"'
-   - '--update-env-vars="NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL"'
-   - '--update-env-vars="NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL"'
+   - '--update-env-vars=NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL,NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL'
  images:
  - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
