--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
  steps:
  # Build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA', '.']
  # Push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['push', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA']
+   args: ['push', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA']
  # Deploy container image to Cloud Run
  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
    entrypoint: gcloud
@@ -13,11 +13,11 @@
    - 'deploy'
    - '$_SERVICE_NAME'
    - '--image'
-   - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
+   - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA'
    - '--region'
    - '$_GCP_REGION'
    - '--platform'
    - 'managed'
    - '--update-env-vars=NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL,NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL'
  images:
- - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
+ - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA'
