Fixed gcloud version in build config

--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -12,6 +12,7 @@ steps:
   name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args:
+  - 'beta'
   - 'run'
   - 'deploy'
   - '$_SERVICE_NAME'
