--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -25,7 +25,7 @@ steps:
   - '--tag'
   - 'pr-${_PR_NUMBER}'
   - '--no-traffic'
-  - '--update-env-vars=NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL,NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL'
+  - '--update-env-vars=NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL,NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL,NEXT_PUBLIC_INGEST_KEY=$_INGEST_API_KEY'
 - id: "link revision on pull request"
   name: "gcr.io/$PROJECT_ID/deployment-previews"
   args:
