--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,15 @@
 steps:
 # Build the container image
-- name: 'gcr.io/cloud-builders/docker'
+- id: 'build'
+  name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA', '.']
 # Push the container image to Container Registry
-- name: 'gcr.io/cloud-builders/docker'
+- id: 'push'
+  name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA']
 # Deploy container image to Cloud Run
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+- id: 'deploy'
+  name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args:
   - 'run'
@@ -20,7 +23,7 @@ steps:
   - 'managed'
   - '--update-env-vars=NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL,NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL'
 # Allocate traffic to this revision (can skip if want manual judgement or canary via console)
-- id: 'Allocate traffic to revision'
+- id: 'traffic'
   name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args:
@@ -28,5 +31,10 @@ steps:
   - 'services'
   - 'update-traffic'
   - '--to-latest'
+  - '$_SERVICE_NAME'
+  - '--region'
+  - '$_GCP_REGION'
+  - '--platform'
+  - 'managed'
 images:
 - 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$SHORT_SHA'
