--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
@@ -19,5 +20,10 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "swr": "^0.3.11"
+  },
+  "devDependencies": {
+    "eslint": "^7.17.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
