--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -11,18 +11,23 @@ steps:
 
   # Run tests: TODO!
 
+  # Security scan
+  - id: 'security'
+  - name: 'gcr.io/$PROJECT_ID/sast-scan'
+    args: ["--type", "nodejs"]
+
   # Build the container image
-  - id: "build image"
+  - id: 'build image'
     name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$_PR_NUMBER-$SHORT_SHA', '.']
 
   # Push the container image to Container Registry
-  - id: "push image"
+  - id: 'push image'
     name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/$_SERVICE_NAME:$_PR_NUMBER-$SHORT_SHA']
 
   # Deploy container image to Cloud Run
-  - id: "deploy revision with tag"
+  - id: 'deploy revision with tag'
     name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -42,8 +47,8 @@ steps:
     - '--update-env-vars=NEXT_PUBLIC_PREDICT_URL=$_PREDICT_API_URL,NEXT_PUBLIC_PREDICT_KEY=$_PREDICT_API_KEY,NEXT_PUBLIC_INGEST_URL=$_INGEST_API_URL,NEXT_PUBLIC_INGEST_KEY=$_INGEST_API_KEY'
 
   # Update Github to add link to preview URL
-  - id: "link revision on pull request"
-    name: "gcr.io/$PROJECT_ID/deployment-previews"
+  - id: 'link revision on pull request'
+    name: 'gcr.io/$PROJECT_ID/deployment-previews'
     args:
     - 'set'
     - '--project-id'
