Fixing invalid step name

--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -13,8 +13,8 @@ steps:
 
   # Security scan
   - id: 'security'
-  - name: 'gcr.io/$PROJECT_ID/sast-scan'
-    args: ["--type", "nodejs"]
+  - name: "gcr.io/$PROJECT_ID/sast-scan"
+    args: ['--type', 'nodejs']
 
   # Build the container image
   - id: 'build image'
