Fix YAML for CI config

--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -13,7 +13,7 @@ steps:
 
   # Security scan
   - id: 'security'
-  - name: "gcr.io/$PROJECT_ID/sast-scan"
+    name: "gcr.io/$PROJECT_ID/sast-scan"
     args: ["--type", "nodejs"]
 
   # Build the container image
