--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/core": "^7.12.10",
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "chart.js": "^2.9.4",
+    "fibers": "^5.0.0",
     "framer-motion": "^3.1.1",
     "next": "10.0.4",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
+    "sass": "^1.32.4",
     "swr": "^0.3.11"
   },
   "devDependencies": {
