Test retire.js scanner take 2

--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -14,7 +14,7 @@ steps:
   # Install security scanner
   - id: 'install scanner'
     name: 'gcr.io/cloud-builders/npm'
-    args: ['install -g retire']
+    args: ['i', '-g', 'retire']
 
   # Security scan
   - id: 'scan'
