--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,15 +11,10 @@ steps:
 
   # Run tests: TODO
 
-  # Install security scanner
-  - id: 'install scanner'
-    name: 'gcr.io/cloud-builders/npm'
-    args: ['i', 'retire']
-
   # Security scan
   - id: 'scan'
-    name: 'bash'
-    args: ["node_modules/retire/bin/retire"]
+    name: 'gcr.io/cloud-builders/npm'
+    args: ['run', 'scan']
 
   # Build the container image
   - id: 'build'
