Added explicit react version to linter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,10 @@
         "react"
     ],
     "rules": {
+    },
+    "settings": {
+        "react": {
+            "version": "17.0.1"
+        }
     }
 }
