--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "scan": "retire"
   },
   "dependencies": {
@@ -24,12 +26,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "fibers": "^5.0.0",
-    "sass": "^1.32.4",
-    "node-sass": "^5.0.0",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.22.0",
-    "retire": "^2.2.4"
+    "fibers": "^5.0.0",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
+    "node-sass": "^5.0.0",
+    "retire": "^2.2.4",
+    "sass": "^1.32.4"
   }
 }
