Fix npm script name for CI test step

--- a/cloudbuild-preview.yaml
+++ b/cloudbuild-preview.yaml
@@ -12,7 +12,7 @@ steps:
   # Run tests
   - id: 'test'
     name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'coverage']
+    args: ['run', 'test:coverage']
 
   # Security scan
   - id: 'scan'
